# launcher-toolkit-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
projects/bauxite/: Cargo.toml  readme.md
projects/bauxite-store/: Cargo.toml  readme.md
projects/bauxite/examples/: vanilla.rs
projects/bauxite/src/: constants.rs  instance.rs  lib.rs
projects/bauxite/src/minecraft/: mod.rs  vanilla.rs  version.rs
projects/bauxite/src/minecraft/jsons/: assets_index.rs  common.rs  manifest.rs  mod.rs  version_manifest.rs
projects/bauxite/src/updater/: mod.rs  updater.rs  vanilla.rs
projects/bauxite/src/utils/: download.rs  mod.rs  os.rs  serde.rs
projects/bauxite/tests/: vanilla_builder.rs
projects/jre-downloader/: Cargo.toml
projects/jre-downloader/exemple/: main.rs
projects/jre-downloader/src/: constants.rs  error.rs  lib.rs
projects/jre-downloader/src/java/: mod.rs
projects/jre-downloader/src/java/download/: download_file.rs  download_manager.rs  mod.rs
projects/jre-downloader/src/java/manifest/: jre_linux.rs  jre_mac.rs  jre_windows.rs  manifest_obj.rs  mod.rs
projects/mojang-jre/: Cargo.toml  readme.md
projects/mojang-jre/examples/: cancellable.rs  legacy_jre.rs  with_callback.rs
projects/mojang-jre/src/: callback.rs  constants.rs  errors.rs  lib.rs  mojang_jre.rs
projects/mojang-jre/src/download/: download_pool.rs  mod.rs
projects/mojang-jre/src/jre/: file.rs  manifest_files.rs  manifest_linux.rs  mod.rs  versions_manifest_obj.rs
