[package]
name = "jre-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
time = { version = "0.3", features = ["serde", "serde-well-known"] }
cfg-if = "1"
hex = "0.4"
sha1 = "0.10"
futures-util = "0"

[lib]
name = "jre-downloader"
path = "src/lib.rs"

#[[test]]
#name = "tests"
#path = "tests/mod.rs"

[[bin]]
name = "jre-downloader-example"
path = "exemple/main.rs"
