[package]
name = "mojang-jre"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = [] }
tracing = { version = "0", default-features = false, features = ["log"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
hex = "0.4"
sha1 = "0.10"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
reqwest = { version = "0", features = ["stream", "json"] }
futures-util = "0.3"

[dev-dependencies]
tracing-subscriber = { version = "0", features = ["env-filter"] }
indicatif = "0"
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "legacy_jre"
